[package]
name = "bevy_obj"
version = "0.5.1"
authors = ["Csányi István <csanyistvan02@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Wavefront .obj mesh asset loader plugin"
repository = "https://github.com/AmionSky/bevy_obj"
readme = "README.md"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", version="0.5.0", default-features=false, features = ["render"]}
anyhow = "1.0"
thiserror = "1.0"
obj-rs = { version = "0.6", default-features = false }

[[example]]
name = "render_obj"
path = "example/render_obj.rs"
